:art: changed namespaces for using in new architecture

--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
+    "description": "money transfer",
     "type": "project",
     "license": "proprietary",
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.2.5",
+        "php": ">8.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "1.11.99.1",
@@ -69,7 +70,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/App",
+            "MoneyTransfer\\": "src/MoneyTransfer"
         }
     },
     "autoload-dev": {
