:hammer: changed architecture

--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/App",
+            "App\\": "src/",
             "MoneyTransfer\\": "src/MoneyTransfer"
         }
     },
