--- a/config/services.yaml
+++ b/config/services.yaml
@@ -14,18 +14,19 @@ services:
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
-        resource: '../src/App/*'
-        exclude: '../src/App/{DependencyInjection,Controller,ApiController,Entity,Migrations,Tests,Kernel.php,*Exception.php}'
+        resource: '../src/'
+        exclude:
+            - '../src/DependencyInjection/'
+            - '../src/Entity/'
+            - '../src/Kernel.php'
+            - '../src/Tests/'
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
     App\Controller\:
-        resource: '../src/App/Controller/**/*Controller.php'
+        resource: '../src/Controller/'
         tags: ['controller.service_arguments']
 
-    App\ApiController\:
-        resource: '../src/App/ApiController/**/*Controller.php'
-        tags: ['controller.service_arguments']
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
