:art: changed structure

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@
 
 #cache composer
 /.composer
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
