--- a/.env
+++ b/.env
@@ -30,3 +30,9 @@ APP_SECRET=021810cf8f53d5916d7f7b8c5329c776
 DATABASE_URL="mysql://root:root@database/money_transfer"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=07d9f516877bd0030868d48e7effd362
+###< lexik/jwt-authentication-bundle ###
