--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,10 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+controllers:
+    resource: '../src/Controller'
+    type: annotation
+    prefix: /api
+
+api_login_check:
+    path: /login_check
