--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,7 +24,7 @@ services:
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
     App\Controller\:
-        resource: '../src/Controller/'
+        resource: '../src/Controller/**/*Controller.php'
         tags: ['controller.service_arguments']
 
 
