--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,6 +3,7 @@
 #    controller: App\Controller\DefaultController::index
 controllers:
     resource: '../src/Controller'
+    defaults: { _format: json }
     type: annotation
     prefix: /api
 
