--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,6 @@
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
         "lexik/jwt-authentication-bundle": "^2.11",
-        "nelmio/api-doc-bundle": "^3.0",
         "phpdocumentor/reflection-docblock": "^5.2",
         "ramsey/uuid-doctrine": "^1.6",
         "sensio/framework-extra-bundle": "^5.1",
@@ -46,7 +45,8 @@
         "symfony/yaml": "5.2.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
-        "webmozart/assert": "^1.10"
+        "webmozart/assert": "^1.10",
+        "zircote/swagger-php": "^3.1"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.18",
