--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,24 +1,36 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory: { memory: null }
+        db:
+            entity:
+                class: App\MoneyTransfer\User\User
+                property: email
     firewalls:
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-        main:
+        login:
+            pattern: ^/login_check
+            stateless: true
             anonymous: true
-            lazy: true
-            provider: users_in_memory
+            json_login:
+                check_path: /login_check
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#firewalls-authentication
+        api:
+            pattern: ^/api
+            anonymous: true
+            stateless: true
+            guard:
+                authenticators:
+                    - lexik_jwt_authentication.jwt_token_authenticator
 
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+    encoders:
+        App\MoneyTransfer\User\User:
+            algorithm: argon2i #O argon2i está disponivel somente para php 7.2+ abaixo use bcrypt
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
-    access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+    # access_control:
+    #     - { path: ^/api, roles: ROLE_USER, methods: ['GET'] }
+    #     - { path: ^/api, roles: ROLE_ADMIN, methods: ['POST', 'PUT', 'DELETE'] }
+    # role_hierarchy:
+    #     ROLE_ADMIN: ROLE_USER
