--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    transactionAuthorization: "%env(TRANSACTION_AUTHORIZATION)%"
+    receiptAuthorization: "%env(RECEIPT_AUTHORIZATION)%"
 
 services:
     # default configuration for services in *this* file
@@ -30,3 +32,23 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    transactionAuthorization.http_client:
+        factory: ['@App\Infra\Http\HttpClientFactory', 'create']
+        class: GuzzleHttp\Client
+        arguments:
+            - base_uri: "%transactionAuthorization%"
+
+    receiptAuthorization.http_client:
+        factory: ['@App\Infra\Http\HttpClientFactory', 'create']
+        class: GuzzleHttp\Client
+        arguments:
+            - base_uri: "%receiptAuthorization%"
+
+    App\MoneyTransfer\Transfer\UserTransferMoney\ValidateTransaction\ValidateTransactionService:
+        arguments:
+            - '@transactionAuthorization.http_client'
+
+    App\MoneyTransfer\Transfer\UserReceivingMoney\ValidateReceiving\ValidateReceivingService:
+        arguments:
+            - '@receiptAuthorization.http_client'
