:pencil:  added endpoint to query microservices

--- a/.env.test
+++ b/.env.test
@@ -6,3 +6,5 @@ PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 
 DATABASE_URL="mysql://root:root@database/money_transfer_test"
+TRANSACTION_AUTHORIZATION=https://run.mocky.io/v3/8fafdd68-a090-496f-8c9a-3442cf30dae6
+RECEIPT_AUTHORIZATION=https://run.mocky.io/v3/b19f7b9f-9cbf-4fc6-ad22-dc30601aec04
