--- a/.env
+++ b/.env
@@ -36,3 +36,5 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=07d9f516877bd0030868d48e7effd362
 ###< lexik/jwt-authentication-bundle ###
+TRANSACTION_AUTHORIZATION=https://run.mocky.io/v3/8fafdd68-a090-496f-8c9a-3442cf30dae6
+RECEIPT_AUTHORIZATION=https://run.mocky.io/v3/b19f7b9f-9cbf-4fc6-ad22-dc30601aec04
